--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
@@ -20,8 +23,10 @@
         </header>
         <div class="nav">
             <ul>
-                <li><i class="fa fa-home" aria-hidden="true"></i> Home</li>
-                <li><i class="fa fa-users" aria-hidden="true"></i> Contact</li>
+                <li>
+                    <i class="fa fa-home" aria-hidden="true"></i> Home</li>
+                <li>
+                    <i class="fa fa-users" aria-hidden="true"></i> Contact</li>
             </ul>
         </div>
     </div>
